# order-matching-engine

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: latency_percentiles.cpp  order_book_bench.cpp
docs/: perf-notes.md
include/: order.h  order_book.h  order_pool.h  price_level.h  types.h
src/: order_book.cpp  order_pool.cpp  price_level.cpp
tests/: allocation_test.cpp  order_book_cancel_test.cpp  order_book_matching_tests.cpp  order_book_smp_tests.cpp  order_pool_test.cpp  price_level_test.cpp
